--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+build_env/pyvenv.cfg
+build_env/Scripts/activate
+build_env/Scripts/activate.bat
+build_env/Scripts/Activate.ps1
+build_env/Scripts/deactivate.bat
+build_env/Scripts/pip.exe
+build_env/Scripts/pip3.exe
+build_env/Scripts/pip3.12.exe
+build_env/Scripts/python.exe
+build_env/Scripts/pythonw.exe
